--- a/action.yml
+++ b/action.yml
@@ -59,7 +59,7 @@ runs:
         zip -r layer.zip python > /dev/null
    
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1-node16
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ inputs.aws-access-key-id }}
         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
