--- a/action.yml
+++ b/action.yml
@@ -74,7 +74,10 @@ runs:
         ADDITIONAL_RUNTIMES: ${{ inputs.additional-python-runtimes }} 
       shell: bash
       run: |
-        cmd="aws lambda publish-layer-version --layer-name $LAYER_NAME --zip-file fileb://layer.zip --compatible-runtimes $RUNTIME $ADDITIONAL_RUNTIMES | jq --compact-output '.' > publish-layer-output.json"
-        echo "::info::Ran: $cmd"
+        aws lambda publish-layer-version \
+          --layer-name $LAYER_NAME \
+          --zip-file fileb://layer.zip \
+          --compatible-runtimes $RUNTIME $ADDITIONAL_RUNTIMES \
+          | jq --compact-output '.' > publish-layer-output.json
 
-        # echo "output=$(cat publish-layer-output.json)" >> $GITHUB_OUTPUT
+        echo "output=$(cat publish-layer-output.json)" >> $GITHUB_OUTPUT
